# soundSync

./: LICENSE  README.md  commands.txt  pyproject.toml  requirements.txt
src/soundSync/: config.py  server.py  start.py  utils (conflicted).py  utils.py
src/soundSync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/soundSync/clients/: config.py
src/soundSync/clients/consumer/: pc.py  web.py
src/soundSync/clients/consumer/templates/: index.html
src/soundSync/clients/pc/: capture.py  stream.py
src/soundSync/clients/producer/: capture.py  stream.py
src/soundSync/server/: broadcast.py  receive.py
